--- a/src/home.html
+++ b/src/home.html
@@ -475,14 +475,14 @@
 							<div class="section-4__block-right">
 								<div class="section-4__content item-container-inner">
 									<div class="section-4__spollers">
-										<div data-spollers data-spollers-speed="1000" class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span>Есть ли болевые ощущения во время операции?</span>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -505,16 +505,16 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers data-spollers-speed="1000" class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span>Как подготовиться к диагностике?</span>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -537,16 +537,16 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers data-spollers-speed="1000" class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span>Что такое астигматизм?</span>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -569,16 +569,16 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers data-spollers-speed="1000" class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span>Что взять с собой на лазерную коррекцию зрения?</span>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -601,16 +601,16 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers data-spollers-speed="1000" class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span>Какие анализы необходимы перед коррекцией зрения?</span>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -633,11 +633,11 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers class="spollers">
-											<details class="spollers__item">
-												<summary class="spollers__title">
+										<div class="spollers">
+											<div class="spollers__item">
+												<div class="spollers__title">
 													<span
 														>Можно ли делать лазерную коррекцию зрения до
 														беременности?</span
@@ -645,7 +645,7 @@
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="spollers__body">
 													<ol>
 														<li>
@@ -668,7 +668,7 @@
 														</li>
 													</ol>
 												</div>
-											</details>
+											</div>
 										</div>
 									</div>
 								</div>
