--- a/src/html/_header-general.htm
+++ b/src/html/_header-general.htm
@@ -36,14 +36,14 @@
 						</div>
 						<nav class="menu__body">
 							<ul class="menu__list">
-								<li data-spollers="1060" class="menu__item">
-									<details class="menu__details">
-										<summary class="menu__summary">
+								<li class="menu__item menu__item--accordion">
+									<div class="menu__details">
+										<div class="menu__summary">
 											<a href="#">Клиника</a>
 											<svg>
 												<use xlink:href="@img/icons/icons.svg#arc"></use>
 											</svg>
-										</summary>
+										</div>
 										<div class="menu__sub-menu sub-menu">
 											<div class="sub-menu__body">
 												<ul class="sub-menu__list">
@@ -62,17 +62,17 @@
 												</ul>
 											</div>
 										</div>
-									</details>
+									</div>
 								</li>
 								<li class="menu__item"><a href="#" class="menu__link">Врачи</a></li>
-								<li data-spollers="1060" class="menu__item">
-									<details class="menu__details">
-										<summary class="menu__summary">
+								<li class="menu__item menu__item--accordion">
+									<div class="menu__details">
+										<div class="menu__summary">
 											<a href="#">Услуги</a>
 											<svg>
 												<use xlink:href="@img/icons/icons.svg#arc"></use>
 											</svg>
-										</summary>
+										</div>
 										<div class="menu__sub-menu sub-menu">
 											<div class="sub-menu__body">
 												<ul class="sub-menu__list">
@@ -94,7 +94,7 @@
 												</ul>
 											</div>
 										</div>
-									</details>
+									</div>
 								</li>
 								<li class="menu__item"><a href="#" class="menu__link">Цены</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
