--- a/src/prices.html
+++ b/src/prices.html
@@ -12,14 +12,14 @@
 							<div class="price-list__body-inner">
 								<div class="price-list__content">
 									<div class="price-list__wrapper">
-										<div data-spollers class="price-item background-white">
-											<details class="price-item__details">
-												<summary class="price-item__title">
+										<div class="price-item background-white">
+											<div class="price-item__details">
+												<div class="price-item__title">
 													<h3>Обследование глаз</h3>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="price-item__body">
 													<ul class="price-item__list">
 														<li class="price-item__item">
@@ -86,16 +86,16 @@
 														</li>
 													</ul>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers class="price-item background-white">
-											<details class="price-item__details">
-												<summary class="price-item__title">
+										<div class="price-item background-white">
+											<div class="price-item__details">
+												<div class="price-item__title">
 													<h3>Хирургическое лечение</h3>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="price-item__body">
 													<ul class="price-item__list">
 														<li class="price-item__item">
@@ -170,16 +170,16 @@
 														</li>
 													</ul>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers class="price-item background-white">
-											<details class="price-item__details">
-												<summary class="price-item__title">
+										<div class="price-item background-white">
+											<div class="price-item__details">
+												<div class="price-item__title">
 													<h3>Лазерное лечение</h3>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="price-item__body">
 													<ul class="price-item__list">
 														<li class="price-item__item">
@@ -233,16 +233,16 @@
 														</li>
 													</ul>
 												</div>
-											</details>
+											</div>
 										</div>
-										<div data-spollers class="price-item background-white">
-											<details data-open class="price-item__details">
-												<summary class="price-item__title">
+										<div class="price-item background-white">
+											<div data-open class="price-item__details">
+												<div class="price-item__title">
 													<h3>Лазерная коррекция зрения</h3>
 													<svg>
 														<use xlink:href="@img/icons/icons.svg#arc-thin"></use>
 													</svg>
-												</summary>
+												</div>
 												<div class="price-item__body">
 													<ul class="price-item__list">
 														<li class="price-item__item">
@@ -315,7 +315,7 @@
 														</li>
 													</ul>
 												</div>
-											</details>
+											</div>
 										</div>
 									</div>
 								</div>
